# Ziko

./: .gitignore  LICENCE  README.md  pyproject.toml  requirements.txt
ziko/: performance.py  plot.py  portfolio.py  quote.py  stock.py  transaction.py
ziko/indicators/: base.py  column.py  factory.py  partial.py
ziko/indicators/momentum/: ao.py  kama.py  mfi.py  roc.py  rsi.py  slope.py  stoch.py  tsi.py  uo.py  wr.py
ziko/indicators/others/: cr.py  dlr.py  dr.py
ziko/indicators/trend/: adx.py  ai.py  cci.py  dpo.py  ema.py  ikh.py  kst.py  ma.py  macd.py  mi.py  psar.py  trix.py  vi.py
ziko/indicators/volatility/: atr.py  bb.py  dc.py  kc.py
ziko/indicators/volume/: adi.py  cmf.py  eom.py  fi.py  nvi.py  obv.py  vpt.py
ziko/strategies/: event.py  operators.py  strategy.py  validation.py
ziko/strategies/detectors/: base.py  crossing.py  factory.py  threshold.py
ziko/strategies/predefined/: buy_and_hold.py  simple_crossing.py  symmetric_threshold.py
ziko/strategies/predefined/indicators/: momentum.py  trend.py  volume.py
